<resources>
    <string name="app_namex">ArmsModule</string>
    <string name="dianzipingtiao">电子凭条案例</string>
    <string name="zhizhipingtiao">纸质凭条案例</string>
    <string name="home_more_hint">全部</string>
    <string name="home_item_daihuan">待还</string>
    <string name="home_item_jiekuan">借款金额：￥</string>
    <string name="home_item_commit_man">递交人：</string>
    <string name="home_item_back_time">还款时间：</string>
    <string name="home_item_yuqi">逾期2天</string>
    <string name="shimingrengzheng">去实名认证</string>
    <string name="yirengzheng">去实名认证</string>
    <string name="setting">设置</string>
    <string name="change_app_psd">修改登录密码</string>
    <string name="change_qianyue_psd">修改签约密码</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="yanzhengma">验证码</string>


    <string name="string_check_user">请输入手机号码！</string>
    <string name="string_check_password">请输入密码！</string>
    <string name="string_check_code">请输入验证码！</string>
    <string name="string_check_phone">请输入手机号码！</string>
    <string name="string_check_phone_right">请输入正确的手机号！</string>
    <string name="string_check_wx_right">请输入正确的微信号！</string>
    <string name="string_check_password_lendth">密码长度由6~20位组成！</string>
    <string name="string_check_password_iseasy">密码太简单.请尝试字母和数字结合</string>
    <string name="string_check_fwtq">请阅读并同意服务条款</string>
    <string name="string_no_login">您还未登录,请先登录</string>
    <string name="app_welcome_hint">欢迎使用51凭条</string>
    <string name="psd_login_hint">密码登录</string>
    <string name="forget_psd">忘记密码</string>
    <string name="login_hint">登录</string>
    <string name="code_login">短信验证码登录</string>
    <string name="jietiaoshu">借条数</string>
    <string name="jiekuanzonge">借款总额（元）</string>
    <string name="daihuanzonge">待还总额（元）</string>
    <string name="chujiezonge">出借总额（元）</string>
    <string name="daishouzonge">待收总额（元）</string>
    <string name="hint1">*借款人是指在信贷活动中以自身的信用或财产作保证，或者以第三者作为担保而从贷款人处借得货币资金的企事业单位或个人。</string>
    <string name="hint2">*出借人是指在借贷合同中将货币或实物的所有权或使用权转移给借用人，并在约定期限内接受返还的一方。</string>
    <string name="jiekuanjine_str">借款金额（元）</string>
    <string name="jiekuanjjine_str_hint">请输入整数</string>
    <string name="jiekuanriqi_str">借款日期</string>
    <string name="jiekuanriqi_str_hint">请选择日期</string>
    <string name="huankuanriqi_str">还款日期</string>
    <string name="huankuanriqi_str_hint">请选择日期</string>
    <string name="jiekuanyongtu">借款用途</string>
    <string name="qingxuanze">请选择</string>
    <string name="chujierenxingming">出借人姓名</string>
    <string name="xiejietiao_mingzitianxie_hint">填写身份证姓名才可生效</string>
    <string name="chujierenshenfengzhenghao">出借人省份证号</string>
    <string name="xuantian">选填</string>
    <string name="qianzhangfufeiren">签章付费人</string>
    <string name="fuwufei">服务费</string>
    <string name="xiejietiao_hint2">*为避免您的利益受损，使用凭条时请注意保存支付宝/微信转账 记录，银行流水等凭证</string>
    <string name="xiejietiao_hint3">*请您在签订借条前确认借款金额、日期、利率等准确无误，并注意保管打款记录、支付宝/微信转账记录及银行流水等，以避免您的利益受损。如果您认为自己受到套路贷、暴力催收等胁迫，请勿签订借条并及时报警！</string>
    <string name="nianhualilv">年化利率</string>
    <string name="jingshouren">经手人</string>
    <string name="dijiaoren">递交人</string>
    <string name="dijiaojine">递交金额</string>
    <string name="jingshouriqi">经手日期</string>
    <string name="jiekuanren">借款人</string>
    <string name="chujieren">出借人</string>
    <string name="jiekuanjine_str2">借款金额</string>
    <string name="yuedinghuankuanriqi">约定还款日期</string>
    <string name="shimingrenzheng">实名认证</string>
    <string name="shimingrenzheng_hint">为保障您的账户安全，请填写您本人的真实 信息，完成实名认证。</string>
    <string name="phone_nums">手机号码</string>
    <string name="xingming">姓名</string>
    <string name="shimingrenzheng_hint2">请填写本人真实姓名</string>
    <string name="idcard">身份证号</string>
    <string name="shuruyinhanka">请输入银行卡号</string>
    <string name="bank_phone_nums">请输入银行预留手机号</string>
    <string name="yishiming">已实名</string>
    <string name="look_more">-查看更多-</string>
    <string name="newplayerhelper">新手帮助</string>
    <string name="ca_zhengshu_hint">借条出自51凭条，严格按照《中华人民共和国合同法》拟定。本平台每份电子借条皆有唯一专属编号。每份借条/收条PDF电子文件自带防篡改安全CA证书，遵照《中华人民共和国电子签名法》的相关规定。电子借条/收条法律效力获得国家仲裁/司法机关认可。</string>
    <string name="feiyongzhifuren">费用支付人</string>
    <string name="pingtaifuwufei">平台服务费</string>
    <string name="shoutiao_jingshouren_hint">*经手人是指收取钱款或物品的人，也是出具收条的人。</string>
    <string name="shoutiao_dijiaoren_hint">*递交人是指递交钱款或物品的人，也是收取收条的人。</string>
    <string name="my_bankcards">我的银行卡</string>
    <string name="avatar">头像</string>
    <string name="security_yz">安全验证</string>
    <string name="swipe_hint">拖动下方滑块完成拼图</string>
    <string name="jiekuanren_xiejietiao_hint">如果出借人要求您填写或确认借款金额、时间、利率与实际借款不符的借条，均涉嫌套路贷或欺诈，请勿签订本借条并报警！</string>
    <string name="chujieren_xiejietiao_hint">本人确保出借的资金为自有资金，且出借行为是合法的民间借贷。</string>
    <string name="jiekuanren_xiejietiao_hint_sure">我已知悉</string>
    <string name="chujieren_xiejietiao_hint_sure">我已确认</string>
</resources>
