<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="361dp"
    android:layout_height="108dp"
    android:layout_marginRight="7dp"
    android:layout_marginLeft="7dp"
    android:background="@drawable/home_item_bg"
    android:padding="8dp">
    <ImageView
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/anli_icon"
        android:layout_width="66dp"
        android:layout_height="49dp"
        android:src="@drawable/anli"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/daihuan_icon" />

            <TextView
                android:id="@+id/back_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_status"
                android:layout_marginLeft="12dp"
                android:text="@string/home_item_daihuan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/money_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:text="@string/home_item_jiekuan"
                android:textSize="13sp" />


        </RelativeLayout>

        <!--<include layout="@layout/include_divider_line"></include>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/commit_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:text="@string/home_item_commit_man"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/yuqi"
                android:layout_width="41dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="110dp"
                android:gravity="center"
                android:background="@drawable/yuqi_bg"
                android:text="@string/home_item_yuqi"
                android:textColor="@color/red_color_ED4641"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/back_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="190dp"
                android:text="@string/home_item_back_time"
                android:textSize="14sp" />


        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        android:id="@+id/money_icon_status"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/jie_icon" />


</RelativeLayout>